# wechatguard

./: .gitignore  README.md  config.json  generate_icon.py  generate_version_info.py  pyproject.toml  requirements.txt  version_info.txt
.github/workflows/: build.yml
src/: help_window.py  icon_generator.py  main.py  settings.py  updater.py  wechat_guardian.py
